replaced Bugs with different Bugs